<resources>
    <string name="app_name">tugasandroid</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_teks">Login</string>
    <string name="login_failed">"Login failed"</string>
    <string name="buat_akun">buat akun?</string>
    <string name="login">Login</string>
    <string name="sebagai_admin">Sebagai Admin</string>
    <string name="nama">NAMA</string>
    <string name="jabatan">JABATAN</string>
    <string name="menu">MENU</string>
    <string name="unik_kode_angota">unik kode(angota)</string>
    <string name="back" />
</resources>