<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:background="@drawable/background">-->


<!--    </LinearLayout>-->

<!--    bacground   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<!--        layout atas    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/backgroundd">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="120dp"
                android:paddingTop="270dp"
                android:text="@string/login_teks"
                android:textSize="50dp"
                android:textStyle="bold" />
        </LinearLayout>

<!--        layout bawah   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/box_input"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_email"
                android:inputType="text"
                android:textStyle="bold"
                android:elegantTextHeight="true"
                android:padding="10dp"/>
            <EditText
                android:id="@+id/text_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/box_input"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textStyle="bold"
                android:elegantTextHeight="true"
                android:padding="10dp"/>

<!--            layout action   -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="30dp"
                android:background="@drawable/bacground_bawah">

                <TextView
                    android:id="@id/btn_buatakun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:layout_weight="1"
                    android:layout_marginTop="40dp"
                    android:text="@string/buat_akun"
                    android:textSize="20sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginTop="40dp"
                    >
                    <TextView
                        android:id="@+id/btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/box_btn"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>